--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
         "laravel/framework": "^9.19",
         "laravel/sanctum": "^3.0",
         "laravel/tinker": "^2.7",
+        "saade/filament-fullcalendar": "^1.7",
         "spatie/eloquent-sortable": "^4.0"
     },
     "require-dev": {
