--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -4,6 +4,9 @@ pipelines:
   default:
     - step:
         script:
+          - apt-get update && apt-get install -y unzip git rsync zip libzip-dev
+          - docker-php-ext-install zip
+          - docker-php-ext-enable zip
           - curl -sS https://getcomposer.org/installer | php -- --install-dir=/usr/local/bin --filename=composer
           - composer install
           - git ftp init --user $FTP_USERNAME --passwd $FTP_PASSWORD $FTP_HOST_PATH
