--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
         "tailwindcss": "^3.2.7",
         "tippy.js": "^6.3.7",
         "vite": "^4.0.0"
+    },
+    "dependencies": {
+        "preline": "^1.8.0"
     }
 }
