--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,7 @@
     "license": "MIT",
     "require": {
         "php": "^8.0.2",
+        "barryvdh/laravel-dompdf": "^2.0",
         "blade-ui-kit/blade-heroicons": "^1.4",
         "filament/filament": "^2.17",
         "guzzlehttp/guzzle": "^7.2",
