--- a/.env.example
+++ b/.env.example
@@ -16,6 +16,13 @@ DB_DATABASE=jovi
 DB_USERNAME=root
 DB_PASSWORD=
 
+DB_CONNECTION_ACCES=mysql
+DB_HOST_ACCES=127.0.0.1
+DB_PORT_ACCES=3306
+DB_DATABASE_ACCES=jovi_acces
+DB_USERNAME_ACCES=root
+DB_PASSWORD_ACCES=
+
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
 FILESYSTEM_DISK=local
