--- a/.env.example
+++ b/.env.example
@@ -13,8 +13,8 @@ DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
 DB_DATABASE=jovi
-DB_USERNAME=root
-DB_PASSWORD=
+DB_USERNAME=admin
+DB_PASSWORD=admin123
 
 DB_CONNECTION_ACCES=mysql
 DB_HOST_ACCES=127.0.0.1
