Fix access database

--- a/.env.example
+++ b/.env.example
@@ -17,7 +17,7 @@ DB_USERNAME=admin
 DB_PASSWORD=admin123
 
 DB_CONNECTION_ACCES=mysql
-DB_HOST_ACCES=127.0.0.1
+DB_HOST_ACCES=mysql
 DB_PORT_ACCES=3306
 DB_DATABASE_ACCES=jovi_acces
 DB_USERNAME_ACCES=root
